gobmkida/g0/find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_attacks_and_defenses/src/engine/worm.c:1280:32: error: use of undeclared identifier 'libs_1'
liberties = findlib( str, 241, libs_1); 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_attacks_and_defenses/src/engine/worm.c:1283:7: error: use of undeclared identifier 'libs_1'
pos = libs_1[k]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/find_worm_attacks_and_defenses/src/obj/1/worm.o] Error 1
